[package]
name = "fafafa-outlook-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool for Outlook email fetcher"
authors = ["Your Name"]

[[bin]]
name = "outlook-cli"
path = "src/main.rs"

[dependencies]
fafafa-outlook-core = { git = "https://github.com/dtamade/fafafa-outlook-core.git" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
dotenvy = "0.15"
